tests/paczka1/small_fuzzy/42906464.err
Error in line 7: mkjWqR S896 373,02
Error in line 4: mkjWqR S896 85,4
Error in line 8: mkjWqR S163 67,2
Error in line 9: mkjWqR S896 29,8
Error in line 10: 8E8Mt4VL S163 3,1
Error in line 14: 8E8Mt4VL A764 48,8
